--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,4 @@
-numpy
+numpy<2
 scipy
 h5py
 notebook
@@ -7,3 +7,7 @@ jupyterlab-myst
 ipywidgets
 matplotlib
 ipympl
+colorspacious
+abtem
+ase
+py4dstem
