--- a/myst.yml
+++ b/myst.yml
@@ -12,7 +12,7 @@ project:
     - Phase Contrast Imaging
     - Nanobeam Diffraction
     - Strain and Orientation Mapping
-  github: https://github.com/gvarnavi/apmc2025-4dstem-workshop
+  github: https://github.com/ophusgroup/apmc2025-4dstem-workshop
   jupyter: true
   #  jupyter:
   #    binder:
@@ -25,7 +25,7 @@ project:
   open_access: true
   license: CC-BY-4.0
   banner: banner.png
-  thumbnail: thumbnail.webp
+  thumbnail: thumbnail.webm
   date: 2024-12-27
   history:
     submitted: 2024-12-27
