--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -8,10 +8,10 @@ jobs:
   submit:
     uses: curvenote/actions/.github/workflows/submit.yml@v1
     with:
-      venue: microscopy
-      kind: article
-      collection: articles
-      id-pattern-regex: '^msa-em-[a-zA-Z0-9_-]{1,30}$'
+      venue: ophusgroup
+      kind: course
+      collection: courses
+      id-pattern-regex: '^colab-[a-zA-Z0-9_-]{1,30}$'
     secrets:
       CURVENOTE: ${{ secrets.CURVENOTE_TOKEN }}
       GITHUB: ${{ secrets.GITHUB_TOKEN }}
