--- a/myst.yml
+++ b/myst.yml
@@ -32,6 +32,7 @@ project:
     published: 2025-01-31
   requirements:
     - 'Dockerfile'
+    - requirements.in
   resources:
     - 'notebooks/**/*'
   references:
