switching to requirements.txt

--- a/myst.yml
+++ b/myst.yml
@@ -31,8 +31,7 @@ project:
     submitted: 2024-12-27
     published: 2025-01-31
   requirements:
-    - 'Dockerfile'
-    - requirements.in
+    - requirements.txt
   resources:
     - 'notebooks/**/*'
   references:
