Revert "switching to requirements.txt"
This reverts commit a779e483189341924a85faaf4b08751b22e04df9.

--- a/myst.yml
+++ b/myst.yml
@@ -31,7 +31,8 @@ project:
     submitted: 2024-12-27
     published: 2025-01-31
   requirements:
-    - requirements.txt
+    - 'Dockerfile'
+    - requirements.in
   resources:
     - 'notebooks/**/*'
   references:
