--- a/myst.yml
+++ b/myst.yml
@@ -18,10 +18,10 @@ project:
   #    binder:
   #      url: https://y2j74k9mn0bz.curvenote.dev/services/binder/
   #      repo: msa-em/em-quickstart-uv
-  #  jupyter:
-  #    server:
-  #      url: 'http://localhost:8888'
-  #      token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
+  # jupyter:
+  #   server:
+  #     url: 'http://localhost:8888'
+  #     token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
   open_access: true
   license: CC-BY-4.0
   banner: banner.png
@@ -88,5 +88,9 @@ project:
         - file: 01_scanning_transmission_electron_microscopy.md
         - file: 02_atomic_models.md
         - file: 03_scattering_potentials.md
+    - title: Notebooks
+      children:
+        - pattern: notebooks/*.ipynb
+    
 site:
   template: book-theme
