--- a/myst.yml
+++ b/myst.yml
@@ -105,12 +105,14 @@ project:
     - title: Nanobeam Analysis
       children:
         - file: 14_strain_orientation.md
-    - title: Try it Yourself!
-      children:
-        - pattern: notebooks/try-it-yourself/*.ipynb
     - title: Notebooks
       children:
-        - pattern: notebooks/*.ipynb
+        - title: Interactive Widgets
+          children:
+            - pattern: notebooks/*.ipynb
+        - title: Try it Yourself!
+          children:
+            - pattern: notebooks/try-it-yourself/*.ipynb
     
 site:
   template: book-theme
